[build-system]
requires = ["setuptools>=67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthpops"
version = "1.10.5"
description = "Synthetic contact network generation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Dina Mistry, Cliff Kerr, Meikang Wu, Mary Fisher, Ace Thompson, and Daniel Klein on behalf of the IDM COVID-19 Response Team", email = "covid@idmod.org"},
]
keywords = ["human contact networks", "synthetic population", "age mixing patterns", "census", "demography"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.9,<4"
dependencies = [
    "sciris>=1.1.1",
    "matplotlib>=3.3.0",
    "numpy",
    "scipy",
    "pandas>=1.2.3",
    "numba",
    "networkx>=2.3",
    "cmocean",
    "cmasher",
    "seaborn",
    "graphviz",
    "pydot",
    "jsonobject",
    "jsbeautifier",
]

[project.urls]
Homepage = "http://synthpops.org"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
]
docs = [
    "pandoc",
    "pypandoc",
    "sphinx>=7.3.7",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme",
    "sphinx-design",
    "readthedocs-sphinx-search",
    "sphinxcontrib-napoleon",
    "plantweb",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
synthpops = ["*.json", "*.obj"]
